# MPR_Sem_V

./: .gitignore  RAG_Pipeline.py  main.py  pyproject.toml  speech_to_text.py  text_to_speech.py
data/: DWM EXP 10.docx  GDSC.xlsx  experiment.txt  report_mpr5.docx
