[project]
name = "mpr-semv-v2-0"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "assemblyai[extras]>=0.45.4",
    "chroma>=0.2.0",
    "chromadb>=1.2.1",
    "deepgram-sdk>=5.2.0",
    "doc2txt>=1.0.8",
    "docx2txt>=0.9",
    "groq>=0.33.0",
    "gtts>=2.5.4",
    "langchain>=1.0.2",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4",
    "langchain-huggingface>=1.0.0",
    "msoffcrypto-tool>=5.4.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pyaudio>=0.2.14",
    "pydub>=0.25.1",
    "pygame>=2.6.1",
    "pymupdf>=1.26.5",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "sentence-transformers>=5.1.2",
    "speechrecognition>=3.14.3",
    "textloader>=0.0.9",
    "unstructured>=0.18.15",
]
